# WillowEngine

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  License.txt  License.txt.txt  README.md  Todo.txt  WillowEngine.makefile  WillowEngine.opensdf  WillowEngine.sdf.REMOVED.git-id  WillowEngine.sln  WillowEngine.v11.suo.REMOVED.git-id  WillowEngine.v12.suo.REMOVED.git-id  appveyor.yml  packages.py  travis-packages.sh
Modules/Core/: CMakeLists.txt  Core.makefile  Core.vcxproj  Core.vcxproj.filters
Modules/Core/include/Core/: Application.h  ArchNode.h  ArchiveNode.h  Camera.h  Component.h  Console.h  Core.h  EventManager.h  Exception.h  FPSCamera.h  Game.h  GameObject.h  IEventDispatcher.h  InputDispatcher.h  InputHandler.h  Interface.h  Object.h  Operations.h  Prop.h  Scene.h  StaticMeshComponent.h  String.h  System.h  Transform.h  TypeTraits.h  config.h  env.h
Modules/Core/source/: Application.cpp  ArchNode.cpp  Camera.cpp  Component.cpp  Console.cpp  EventManager.cpp  Exception.cpp  FPSCamera.cpp  Game.cpp  GameObject.cpp  InputHandler.cpp  Interface.cpp  Object.cpp  Prop.cpp  Scene.cpp  StaticMeshComponent.cpp  String.cpp  Transform.cpp  config.cpp
Modules/Core/source/Containers/: DynamicBuffer.cpp  String.cpp
Modules/Core/source/Event/: Event.cpp  EventHandler.cpp  EventManager.cpp  EventQueue.cpp
Modules/Core/source/IO/: ArchiveReader.cpp  Console.cpp
Modules/Core/source/Math/: Mat4.cpp  Quat.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
Modules/Core/source/Memory/: MemoryBlock.cpp  MemoryManager.cpp  New.cpp  OwnerPtr.cpp
Modules/Core/source/Misc/: TimeStamp.cpp
Modules/Core/source/Operations/: FromArchive.cpp  FromString.cpp  ToArchive.cpp  ToString.cpp
Modules/Core/source/Reflection/: ClassInfo.cpp  CompoundInfo.cpp  DataInfo.cpp  EnumInfo.cpp  FieldInfo.cpp  InterfaceInfo.cpp  Module.cpp  PointerInfo.cpp  PrimitiveInfo.cpp  PropertyInfo.cpp  Reference.cpp  Reflection.cpp  StructInfo.cpp  TypeIndex.cpp  TypeInfo.cpp  Unpack.cpp  Value.cpp  Variant.cpp  VoidInfo.cpp
Modules/Core/source/Resource/: Resource.cpp
Modules/Core/source/Testing/: Test.cpp
Modules/Engine/: CMakeLists.txt  Engine.makefile  Engine.makefile~  Engine.vcxproj  Engine.vcxproj.filters
Modules/Engine/content/shaders/: default.frag
Modules/Engine/include/Engine/: Behavior.h  Camera.h  CameraComponent.h  Component.h  Entity.h  EventDispatcher.h  EventManager.h  GHandle.h  Game.h  GameObject.h  Handle.h  IEventDispatcher.h  ITransformable.h  InputDispatcher.h  Instance.h  Pawn.h  Prop.h  Scene.h  System.h  Transform.h  World.h  config.h
Modules/Engine/source/: Camera.cpp  CameraComponent.cpp  Component.cpp  Entity.cpp  EventManager.cpp  Game.cpp  GameObject.cpp  Physics.h  Prop.cpp  Scene.cpp  System.cpp  Transform.cpp  World.cpp
Modules/Engine/source/Assets/: Material.cpp  (+3 more)
Modules/Resource/: CMakeLists.txt  Resource.makefile  Resource.vcxproj  Resource.vcxproj.filters  packages.config
Modules/Resource/source/: Archive.cpp  Asset.cpp  AssetManager.cpp  Image.cpp  Mesh.cpp  Path.cpp  Resource.cpp  ResourceManager.cpp  SystemResource.cpp  TextFile.cpp  config.cpp
Tests/CoreTest/: CMakeLists.txt  CoreTest.makefile  CoreTest.makefile~  CoreTest.vcxproj  CoreTest.vcxproj.filters  Engine.makefile~
Tests/CoreTest/source/: main.cpp
(+925 files in other folders)
